# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.38 2007-12-11 00:26:51 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.5 (2007/??/??)
 - (2007/12/10) Fixed bug# 1428 - whitespaces remove from email subject
    (notification and new tickets creation) if utf-8 is used.
    The problem is a bug in MIME::Tools/MIME::Words, for more info see
    CPAN-Bug# 5462: http://rt.cpan.org/Public/Bug/Display.html?id=5462
    As solution Kernel/cpan-lib/MIME/Words.pm got patched. Note: anybody
    who is not using Kernel/cpan-lib/ need to wait till this bug is fixed
    in official MIME::Tools/MIME::Words releases.
 - (2007/12/10) Fixed bug# 2166 - Probem with HTML-mails sent by MS Outlook
    2003 - "&#8211;" / long dash gets not decoded.
 - (2007/12/10) Fixed bug# 2377 - Missing translation in
    AdminCustomerUserService mask.
 - (2007/12/03) Fixed bug# 2537 - Unable to set free time fields.
 - (2007/11/13) Fixed bug# 2498 - A wrong sum of requests was shown in the
    performance log.
 - (2007/11/07) Fixed bug# 2482 - IntroUpgradePre in .opm files is not working
    on upgradinging via online repository.

2.2.4 (2007/11/06)
 - (2007/11/06) Fixed bug# 2477 - Escalation time calculation (destination time of
    escalation) is not working if host system is running in summertime/wintertime
    mode (loops because system is changing system time from 3:00 am to 2:00 am).
 - (2007/11/05) Fixed bug# 2474 - Config option UserSyncLDAPAttibuteGroupsDefination
    and UserSyncLDAPAttibuteRolesDefination is not working.
 - (2007/11/05) Fixed small typo in scripts/database/otrs-initial_insert.xml, for
    escalation notification text.
 - (2007/11/05) Fixed bug# 2473 - Not able to update existing cache files of